added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -166,7 +166,7 @@ function run() {
             $("input[name='ssid']" ).attr('disabled', false);
             $('span').css({color:'black',opacity: 1});
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-            $("#Run").fadeIn("slow");
+            $("#Run").fadeOut("slow");
         },
 
         // handle a non-successful response
