added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -167,6 +167,7 @@ function run() {
             $('span').css({color:'black',opacity: 1});
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
             $("#Run").fadeOut("slow");
+            console.log(json.errors)
         },
 
         // handle a non-successful response
