--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -111,7 +111,7 @@ ssid_status=[]
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
             console.log(ssid.id+' already UP '+ssidlist)
-            console.log(up_new.length,down_new.length)
+            //console.log(up_new.length,down_new.length)
             if (up_new.length === 0 && down_new.length === 0) {
             $('#Run').css('display','none');
      }
@@ -129,7 +129,7 @@ ssid_status=[]
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
             console.log(ssid.id+ " already DOWN "+ssidlist)
-            console.log(up_new.length,down_new.length)
+            //console.log(up_new.length,down_new.length)
         if (up_new.length === 0 && down_new.length === 0) {
             $('#Run').css('display','none');
      }
