added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -85,7 +85,7 @@ $('span').mouseleave(function(){
 
 timer=1800
 $( "#timer" ).keyup(function() {
-    timer = $( this ).val();}
+    timer = $( this ).val()})
 
 
 {% autoescape off %}
