added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -176,6 +176,7 @@ function run() {
             down_new=[]
             all_new=[]
             ip=[]
+            $('#timer').val('');
             $("#loading").css('display','none');
             $("input[name='ssid']" ).attr('disabled', false);
             $('span').css({color:'black',opacity: 1});
