--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -48,8 +48,8 @@
 
 
 {% endfor %}
-<label for="timer">Timer:</label>
-<input style="display: none" type="text" id="timer" placeholder="default 30 minutes" name="timer" pattern="[0-9]{4}">
+<label style="display: none;" id="time_label" for="timer">Timer(in seconds):</label>
+<input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
 <input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;" type="button" id="Run" onClick="run()" value="Run"/> <br>
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none">
 <div id="success" style="display: none;color:green"><span id="status_message">Success</span></div>
@@ -110,7 +110,8 @@ ssid_status=[]
             $('span.'+ssid.id).css({color:'green',opacity: 0.2}).animate({opacity: 1}, 700 );
             up_new.push(ssid.id)
             ip.push(ssid.ip)
-            $('#Run,#timer').css('display','block');
+            $('#Run').css('display','block');
+            $('#timer,#time_label').css('display','inline-block');
         }
         else {
             index = down_new.indexOf(String(ssid.id));
@@ -120,7 +121,8 @@ ssid_status=[]
             console.log(ssid.id+' already UP '+ssidlist)
             //console.log(up_new.length,down_new.length)
             if (up_new.length === 0 && down_new.length === 0) {
-            $('#Run,#timer').css('display','none');
+            $('#Run').css('display','block');
+            $('#timer,#time_label').css('display','inline-block');
      }
         }
 }
@@ -182,7 +184,7 @@ function run() {
             $("input[name='ssid']" ).attr('disabled', false);
             $('span').css({color:'black',opacity: 1});
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-            $("#Run,#timer").fadeOut("slow");
+            $("#Run,#timer,#time_label").fadeOut("slow");
             console.log(json.errors)
         },
 
