added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -186,6 +186,7 @@ function run() {
             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
             $("#Run,#timer,#time_label").fadeOut("slow");
             console.log(json.errors)
+            console.log('Success')
         },
 
         // handle a non-successful response
