added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -162,7 +162,7 @@ function run() {
 
     console.log("Sending POST by ajax");
             $.ajax({
-            url : "/",
+            url : "ssid_update/",
             type : "POST",
             data : { up : JSON.stringify(up_new), down:JSON.stringify(down_new),timer:timer }, // data sent with the post request
 
