--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -141,7 +141,10 @@ ssid_status=[]
             console.log(ssid.id+ " already DOWN "+ssidlist)
             //console.log(up_new.length,down_new.length)
         if (up_new.length === 0 && down_new.length === 0) {
-            $('#Run').css('display','none');
+            $('#Run').css('display','none')
+        else if (up_new.length==0) {
+                $('#timer,#time_label').css('display','none');
+            }
      }
         }
 
