--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -119,7 +119,7 @@ ssid_status=[]
             down_new.splice(index, 1);
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+' already UP '+ssidlist)
+            console.log(ssid.id+' already UP ')
             //console.log(up_new.length,down_new.length)
             if (up_new.length === 0 && down_new.length === 0) {
             $('#Run').css('display','block');
@@ -138,7 +138,7 @@ ssid_status=[]
             up_new.splice(index,1)
             //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
             $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
-            console.log(ssid.id+ " already DOWN "+ssidlist)
+            console.log(ssid.id+ " already DOWN ")
             //console.log(up_new.length,down_new.length)
         if (up_new.length === 0 && down_new.length === 0) {
             $('#Run').css('display','none')}
