added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -7,7 +7,7 @@
     <link href="{% static 'stylesheet.css' %}" rel="stylesheet" type="text/css" >
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
    <!-- <script src="{% static 'main.js' %}"></script> -->
-   <meta http-equiv="refresh" content="60">
+   <!--<meta http-equiv="refresh" content="60"> -->
 
 </head>
 
