--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -6,13 +6,35 @@
     <meta charset="utf-8">
     <link href="{% static 'stylesheet.css' %}" rel="stylesheet" type="text/css" >
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
-   <!-- <script src="{% static 'main.js' %}"></script> -->
-   <meta http-equiv="refresh" content="60">
+    <meta http-equiv="refresh" content="60">
+<style>
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
 
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+div.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+}
+</style>
 </head>
 
 <body>
-
+<!--
 {% for k,i in servers %}
     <div style="border:1px solid gray;display: inline-block;margin:10px;padding:5px;">
  <div style="color:red;font-size: 14px;text-decoration: underline"><a style="color:red;" href="http://{{ i }}">{{ i }}</a></div>
@@ -28,6 +50,27 @@
      {% endfor %}
     </div>
 {% endfor %}
+-->
+<h2>Select server</h2>
+{% for k,i in servers %}
+<button class="accordion">{{ i }}</button>
+    <div class="panel">
+        <div style="color:red;font-size: 14px;text-decoration: underline"><a style="color:red;" href="http://{{ i }}">{{ i }}</a></div>
+        <ul>
+        {% for j in latest %}
+        {% if j.web == i %}
+           {% if j.status %}
+                 <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a></li>
+                         {% else %}
+                 <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a><br></li>
+           {% endif %}
+        {% endif %}
+     {% endfor %}
+        </ul>
+    </div>
+{% endfor %}
+
+
 <label style="display: none;" id="time_label" for="timer">Timer(in seconds):</label>
 <input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
 <input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;" type="button" id="Run" onClick="run()" value="Run"/> <br>
@@ -39,6 +82,24 @@
 
 
 <script language="JavaScript">
+
+
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.display === "block") {
+            panel.style.display = "none";
+        } else {
+            panel.style.display = "block";
+        }
+    }
+}
+
+
 
 $(document).ready(function(){
  $('span').mouseenter(function(){
@@ -58,9 +119,7 @@ ssidlist={{ all_up_ssids }}
 {% endautoescape %}
 
 
-//console.log(up_new)
-//console.log(down_new)
-//console.log("SSID LIST= "+ssidlist)
+
 up_new=[];
 down_new=[];
 ip=[]
@@ -189,27 +248,6 @@ else {
 }
 
 </script>
-
-
-
-<!--
-<script>
-
-    $(document).ready(function(){
-{% for i in latest %}
-    $('#{{ i.name }}').change(function() {
-            if($(this).is(':checked')){
-            console.log("CCCCheckeddddddd");
-            up('{{ i.name }}');
-       }
-        else
-            {
-                console.log("UNCheckeddddddd");
-                down('{{ i.name }}');
-}})
-{% endfor %}
-
-
 
 </body>
 </html>
