--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -13,7 +13,7 @@ button.accordion {
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 100%;
+    width: 150px;
     border: none;
     text-align: left;
     outline: none;
