--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -13,12 +13,13 @@ button.accordion {
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 150px;
+    width: 200px;
     border: none;
-    text-align: left;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    display: block;
+    text-align: center;
 }
 
 button.accordion.active, button.accordion:hover {
