added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -10,6 +10,7 @@
 <style>
 button.accordion {
     background-color: #eee;
+    border-bottom: 1px solid darkgrey;
     color: #444;
     cursor: pointer;
     padding: 18px;
@@ -20,6 +21,8 @@ button.accordion {
     transition: 0.4s;
     display: block;
     text-align: center;
+    padding-left: 100%;
+    padding-right: 100%;
 }
 
 button.accordion.active, button.accordion:hover {
