--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -21,8 +21,8 @@ button.accordion {
     transition: 0.4s;
     display: block;
     text-align: center;
-    padding-left: 100%;
-    padding-right: 100%;
+    margin-left: 100%;
+    margin-right: 100%;
 }
 
 button.accordion.active, button.accordion:hover {
