--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -15,14 +15,13 @@ button.accordion {
     cursor: pointer;
     padding: 18px;
     width: 200px;
-    border: none;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
     display: block;
     text-align: center;
-    margin-left: 100%;
-    margin-right: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 button.accordion.active, button.accordion:hover {
