--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -43,8 +43,8 @@ div.panel {
 {% for k,i in servers %}
 <button class="accordion">{{ i }}</button>
     <div class="panel">
-        <a style="color:red;font-size: 14px;text-decoration: underline;position: inherit" href="http://{{ i }}">{{ i }}</a>
-        <ul style="position: inherit">
+        <ul style="margin-left: auto;margin-right: auto">
+        <a style="color:red;font-size: 14px;text-decoration: underline;margin-left: auto;margin-right: auto" href="http://{{ i }}">{{ i }}</a>
         {% for j in latest %}
         {% if j.web == i %}
            {% if j.status %}
