added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -34,7 +34,8 @@ button.accordion.active, button.accordion:hover {
     display: none;
     background-color: white;
     margin-left: auto;
-    margin-right: auto;}
+    margin-right: auto;
+    border:1px solid darkgrey}
 
 
 </style>
