--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -29,8 +29,7 @@ button.accordion.active, button.accordion:hover {
 }
 
 .panel {
-    padding: 0 18px;
-    display: none;
+    padding:10px;
     background-color: white;
     margin-left: auto;
     margin-right: auto;
@@ -38,6 +37,7 @@ button.accordion.active, button.accordion:hover {
 
 .inside {
     margin-left: 5px;
+    display: none;
 }
 
 </style>
