added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -33,11 +33,13 @@ button.accordion.active, button.accordion:hover {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;}
+    width: 200px;
+border: 1px solid darkgrey;}
 
 .inside {
     margin-left: 5px;
     display: none;
+    list-style-type: none;
 }
 
 </style>
