--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -18,7 +18,6 @@ button.accordion {
     outline: none;
     font-size: 15px;
     transition: 0.4s;
-    display: block;
     text-align: center;
     margin-left: 5px;
     border-radius: 15px;
@@ -29,19 +28,18 @@ button.accordion.active, button.accordion:hover {
 }
 
 .panel {
-    padding:10px;
     background-color: white;
-    width: 200px;
     border: 1px solid darkgrey;}
 
-.inside {
+ul.inside {
     display: none;
     list-style-type: none;
     padding-left: 5px;
 }
+
 .big {
     border:2px solid red;
-    width: 270px;
+    width: 440px;
     margin-left: auto;
     margin-right: auto;
 }
