--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -36,7 +36,7 @@ ul.inside {
     display: none;
     list-style-type: none;
     padding-left: 5px;
-    position: absolute;
+    position: relative;
 }
 
 .big {
