--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -34,7 +34,7 @@ button.accordion.active, button.accordion:hover {
 ul.inside {
     display: none;
     list-style-type: none;
-    padding-left: 5px;
+    padding-left: 10px;
     position: relative;
 }
 
@@ -42,6 +42,7 @@ ul.inside {
     width: 540px;
     margin-left: auto;
     margin-right: auto;
+    border:1px solid red;
 }
 
 
