--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -41,9 +41,7 @@ ul.inside {
 .big {
     width: 460px;
     margin-left: auto;
-    margin-right: auto;
-    border:1px solid red;
-}
+    margin-right: auto;  }
 
 
 </style>
