added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -68,8 +68,11 @@ ul.inside {
        </ul>
  </div>
 {% endfor %}
-<label style="display: none;" id="time_label" for="timer">Timer(in seconds):</label>
-<input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
+
+
+<input type="checkbox" name="Timer" id="timercheckbox">Timer(in seconds)
+<!--<label style="display: none;" id="time_label" for="timer">Timer(in seconds):</label>
+<input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}"> -->
 <input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;" type="button" id="Run" onClick="run()" value="Run"/> <br>
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none">
 <div id="success" style="display: none;color:green"><span id="status_message">Success</span></div>
@@ -100,6 +103,7 @@ for (i = 0; i < acc.length; i++) {
 }
 
 
+$("#timercheckbox:checked").append('<input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">')
 
 $(document).ready(function(){
  $('span').mouseenter(function(){
