added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -111,6 +111,7 @@ for (i = 0; i < acc.length; i++) {
 
 
 function update_timer(timer) {
+    console.log('Update is working')
     if (timer.checked){
         $("#time").css("display","block")
     }
