--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -74,8 +74,9 @@ ul.inside {
 
 
 <div class="footer">
-<input type="checkbox" name="Timer" style= "display: none" id="timercheckbox" onclick="update_timer(this)">Timer(in seconds)
-<!--<label style="display: none;" id="time_label" for="timer">Timer(in seconds):</label> -->
+<label style="display: none;" id="time_label" for="timercheckbox">Timer(in seconds):</label>
+<input type="checkbox" name="Timer" style= "display: none" id="timercheckbox" onclick="update_timer(this)">
+
 <input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
 
 <input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;" type="button" id="Run" onClick="run()" value="Run"/> <br>
