added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -156,7 +156,7 @@ ssid_status=[]
             up_new.push(ssid.id)
             ip.push(ssid.ip)
             $('#Run').css('display','block');
-            $('#timer,#time_label,#timercheckbox').css('display','inline-block');
+            $('#time_label,#timercheckbox').css('display','inline-block');
         }
         else {
             index = down_new.indexOf(String(ssid.id));
