--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -44,7 +44,8 @@ ul.inside {
     margin-right: auto;  }
 
 .footer {
-        position: relative;
+    border:1px solid red;
+    position: relative;
     padding-left: auto;
     padding-right: auto;
     }
