added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -45,8 +45,8 @@ ul.inside {
 
 .footer {
     border:1px solid red;
-    position: relative;
    text-align: center;
+    width:100px;
     }
 
 </style>
@@ -86,7 +86,8 @@ ul.inside {
 <div id="success" style="display: none;color:green"><span id="status_message">Success</span></div>
 <span style="display: none;color: red" id="no_one_chosen">Please, choose at least one ssid</span>
 <div id="errors" style="display: none"></div>
-    </div>
+
+</div>
 </div>
 
 
