added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -46,7 +46,9 @@ ul.inside {
 .footer {
     border:1px solid red;
    text-align: center;
-    width:100px;
+    width:150px;
+    margin-left: auto;
+    margin-right: auto;
     }
 
 </style>
