--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -34,7 +34,7 @@ button.accordion.active, button.accordion:hover {
 ul.inside {
     display: none;
     list-style-type: none;
-    padding-left: 30px;
+    padding-left: 35px;
     position: relative;
 }
 
@@ -82,7 +82,7 @@ ul.inside {
 <label style="display: none;" id="time_label" for="timercheckbox">Timer(in seconds):</label>
 <input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
 
-<input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;" type="button" id="Run" onClick="run()" value="Run"/> <br>
+<input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;" type="button" id="Run" onClick="run()" value="Run"/> <br>
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none">
 <div id="success" style="display: none;color:green"><span id="status_message">Success</span></div>
 <span style="display: none;color: red" id="no_one_chosen">Please, choose at least one ssid</span>
