added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -49,6 +49,8 @@ ul.inside {
     margin-right: auto;
     width:170px;
     border:1px solid red;
+    padding-left: auto;
+    padding-right: auto;
     }
 
 </style>
