--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -44,7 +44,7 @@ ul.inside {
     margin-right: auto;  }
 
 .footer {
-   text-align: center;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     width:170px;
@@ -79,11 +79,11 @@ ul.inside {
 {% endfor %}
 
 
-<div class="footer">
 
-<input type="checkbox" name="Timer" style= "display: none" id="timercheckbox" onclick="update_timer(this)">
-<label style="display: none;" id="time_label" for="timercheckbox">Timer(in seconds):</label>
-<input style="display: none" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
+
+<input type="checkbox" name="Timer" style= "display: none;text-align: center" id="timercheckbox" onclick="update_timer(this)">
+<label style="display: none;text-align: center" id="time_label" for="timercheckbox">Timer(in seconds):</label><br>
+<input style="display: none;text-align: center" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
 
 <input style="width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;" type="button" id="Run" onClick="run()" value="Run"/> <br>
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none">
@@ -91,7 +91,7 @@ ul.inside {
 <span style="display: none;color: red" id="no_one_chosen">Please, choose at least one ssid</span>
 <div id="errors" style="display: none"></div>
 
-</div>
+
 </div>
 
 
