added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -81,7 +81,7 @@ ul.inside {
 
 <div class="footer">
 <input type="checkbox" name="Timer" style= "margin-left:auto;margin-right:auto;display: none;text-align: center" id="timercheckbox" onclick="update_timer(this)">
-<label style="margin-left:auto;margin-right:auto;display: none;text-align: center" id="time_label" for="timercheckbox">Timer(in seconds):</label
+<label style="margin-left:auto;margin-right:auto;display: none;text-align: center" id="time_label" for="timercheckbox">Timer(in seconds):</label>
 <input style="margin-left:auto;margin-right:auto;display: none;text-align: center" type="text" id="timer" placeholder="default 1800 seconds (30m)" name="timer" pattern="[0-9]{4}">
     <br>
 <input style="margin-left:auto;margin-right:auto;width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;text-align: center" type="button" id="Run" onClick="run()" value="Run"/>
