--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -56,7 +56,7 @@ ul.inside {
 
 <body>
 <div class="big">
-<h2 style="text-align: center">Select server</h2>
+<h2 style="border-radius: 15px; border:1px solid darkgrey">Select server</h2>
 
 {% for k,i in servers %}
  <div class="panel">
