added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -56,7 +56,7 @@ ul.inside {
 
 <body>
 <div class="big">
-<h3>Select server...</h3>
+<h2 style="color:gray">Select server...</h2>
 
 {% for k,i in servers %}
  <div class="panel">
