--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -32,7 +32,8 @@ button.accordion.active, button.accordion:hover {
 
 .panel {
     background-color: white;
-    display: inline-block;}
+    display: inline-block;
+     text-align: center}
 
 ul.inside {
     display: none;
@@ -44,7 +45,8 @@ ul.inside {
 .big {
     width: 460px;
     margin-left: auto;
-    margin-right: auto;  }
+    margin-right: auto;
+     text-align: center}
 
 .footer {
     margin: 0 auto;
