--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -32,21 +32,19 @@ button.accordion.active, button.accordion:hover {
 
 .panel {
     background-color: white;
-    display: inline-block;
-     text-align: center}
+    display: inline-block;  }
 
 ul.inside {
     display: none;
     list-style-type: none;
-    padding-left: 35px;
-    position: relative;
+    padding-left: 30px;
+    text-align: center;
 }
 
 .big {
     width: 460px;
     margin-left: auto;
-    margin-right: auto;
-     text-align: center}
+    margin-right: auto;  }
 
 .footer {
     margin: 0 auto;
