added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -32,7 +32,8 @@ button.accordion.active, button.accordion:hover {
 
 .panel {
     background-color: white;
-    display: inline-block;  }
+    display: inline-block;
+    border:1px solid red;}
 
 ul.inside {
     display: none;
