added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -37,7 +37,7 @@ ul.inside {
     display: none;
     list-style-type: none;
     padding-left: 30px;
-    text-align: center;
+    text-align: left;
 }
 
 .big {
